# extent-ai-eval

./: .gitignore  README.md  main.py  pyproject.toml  test_summary.py
output/: dialog_axiata_plc_annual_report_2024_6a571afa.json  financial_statement_1__10bc9e76.json
prompts/: extract.prompt
scripts/: extract.py  extract_with_llm.py  file_handler.py  pipeline.py  utils.py
